# serializer version: 1
# name: test_list[restart_build]
  '''
  Available actions:
  
  restart_once
      No description
  
  
  '''
# ---
# name: test_list[restart_build].1
  list([
    '.gitignore',
    'Byggfile.py',
  ])
# ---
# name: test_list[restart_build].2
  list([
    '.gitignore',
    'Byggfile.py',
    'restart_status.txt',
  ])
# ---
# name: test_list[restart_build].3
  list([
    '.gitignore',
    'Byggfile.py',
  ])
# ---
# name: test_list[trim]
  '''
  Available actions:
  
  trim
      No description
  
  
  '''
# ---
# name: test_list[trim].1
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
  ])
# ---
# name: test_list[trim].2
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
  ])
# ---
# name: test_list[trim].3
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
  ])
# ---
# name: test_trim
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
    'files/out/trimmableB.txt',
    'files/trimmableA.txt',
  ])
# ---
# name: test_trim.1
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
  ])
# ---
# name: test_trim.2
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
    'files/out/trimmableB.txt',
    'files/trimmableA.txt',
  ])
# ---
# name: test_trim.3
  list([
    '.gitignore',
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
  ])
# ---
